Revision history for SPVM
0.9507  2021-02-23
        [CHANGE]
        * SPVM don't support nmake. Already nmake test always fails until now.
        * Add "index_len" method to the "Fn" module.
        * Add "rindex_len" method to the "Fn" module.
        
0.9506  2021-02-22
        [CHANGE]
        * Add no_symbol_cache_flag, set_no_symbol_cache_flag, get_no_symbol_cache_flag native APIs
        * Precompile and native method of SPVM core become reentrant if no_symbol_cache_flag is set.
        * Fix precompile exception bugs when symbols is not found.
        * Add print, print_stderr native APIs.
        * env is not managed by SPVM memory allocator because env must exist before the compiler is created.
        * Add the following native APIs for the compilation of SPVM
          SPVM_ENV* (*new_env_raw)(SPVM_ENV* env);
          void (*free_env_raw)(SPVM_ENV* env);
          int32_t (*init_env)(SPVM_ENV* env);
          void (*call_init_blocks)(SPVM_ENV* env);
          void (*cleanup_global_vars)(SPVM_ENV* env);
          void* (*new_compiler)(SPVM_ENV* env);
          void (*compiler_free)(SPVM_ENV* env, void* compiler);
          void (*compiler_set_start_line)(SPVM_ENV* env, void* compiler, int32_t start_line);
          int32_t (*compiler_get_start_line)(SPVM_ENV* env, void* compiler);
          void (*compiler_set_start_file)(SPVM_ENV* env, void* compiler, const char* start_file);
          const char* (*compiler_get_start_file)(SPVM_ENV* env, void* compiler);
          void (*compiler_add_module_dir)(SPVM_ENV* env, void* compiler, const char* module_dir);
          int32_t (*compiler_get_module_dirs_length )(SPVM_ENV* env, void* compiler);
          const char* (*compiler_get_module_dir )(SPVM_ENV* env, void* compiler, int32_t module_dir_id);
          int32_t (*compiler_compile_spvm)(SPVM_ENV* env, void* compiler, const char* class_name);
          int32_t (*compiler_get_error_messages_length)(SPVM_ENV* env, void* compiler);